--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,5 @@
-ErrorDocument 404 /public/error/404.html
-
-#Options -Indexes
+Options -Indexes
 SetEnv TZ Asia/Jakarta
 Header set Set-Cookie "language=%{lang}e; path=/;" env=lang
 
-<IfModule mod_gzip.c>
-    mod_gzip_on       Yes
-    mod_gzip_dechunk  Yes
-    mod_gzip_item_include file      \.(html?|txt|css|js|php|pl)$
-    mod_gzip_item_include handler   ^cgi-script$
-    mod_gzip_item_include mime      ^text/.*
-    mod_gzip_item_include mime      ^application/x-javascript.*
-    mod_gzip_item_exclude mime      ^image/.*
-    mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
-</IfModule>
+ErrorDocument 404 /public/error/404.html
