--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
-Options -Indexes
-SetEnv TZ Asia/Jakarta
-Header set Set-Cookie "language=%{lang}e; path=/;" env=lang
+#Options -Indexes
+#SetEnv TZ Asia/Jakarta
+#Header set Set-Cookie "language=%{lang}e; path=/;" env=lang
 
 ErrorDocument 404 /public/error/404.html
