--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,2 @@
-[[redirects]]
-  from = "/*"
-  to = "/public/error/404.html"
-  status = 404
+/* /public/error/404.html 404
+/public/* /public/error/403.html 403
