--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
-/* /public/error/404.html 404
-/public/* /public/error/403.html 403
+[[redirects]]
+  from = "/*"
+  to = "/public/error/404.html"
+  status = 404
+
+[[redirects]]
+  from = "/public/*"
+  to = "/public/error/403.html"
+  status = 403
